syntax = "proto3";

import "user.proto";

package auth;

option go_package = "proto/;proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  user.User user = 1;
  string token = 2;
}